# aphasia-thesis

./: README.md  pyproject.toml
config/: synth.yaml  tab.yaml
config/ae/: sparse.yaml
config/ds/: default.yaml  white.yaml
config/model/: acgan.yaml  cvae.yaml
config/optim/: rmsprop.yaml
notebooks/: ACGAN.ipynb  CVAE.ipynb  ID.ipynb  VAE.ipynb  bootstrap.ipynb  cnn3d.ipynb  look_at_data.ipynb  misc.ipynb  res_to_latex.ipynb  synth.ipynb
results/: asa-rac.pkl  ordinal.pkl
results/ae-exp/: ae-asa-rac.pkl  ae-asa-reg.pkl  ae-sev-clf.pkl  ae-sev-rac.pkl  ae-sev-reg.pkl  ae-type-clf.pkl
results/exp-10.03/: asa-rac.pkl  asa-reg.pkl  sev-clf.pkl  sev-rac.pkl
results/params/: both-d-mlp-reg-sev-20:05-11-04.pkl  white-cb-reg-12:24-17-02.pkl  white-d-rf-clf-sev-16:56-03-04.pkl  white-d-rf-clf-type-17:06-03-04.pkl  white-d-rf-reg-asa-16:34-03-04.pkl  white-d-rf-reg-asa-16:47-03-04.pkl  white-d-rf-reg-asa-17:09-03-04.pkl  white-d-rf-reg-sev-16:55-03-04.pkl  white-d-rf-reg-sev-17:08-03-04.pkl  white-l-d-m-rf-clf-00:05-15-03.json  white-l-d-m-rf-clf-03:19-15-03.json  white-l-d-m-rf-clf-03:27-15-03.json  white-l-d-m-rf-clf-19:58-13-03.json  white-l-d-m-rf-clf-asa-19:33-13-03.json  white-l-d-m-rf-reg-01:48-15-03.json  white-l-d-m-rf-reg-01:49-15-03.json  white-l-d-m-rf-reg-01:50-15-03.json  white-l-d-m-rf-reg-02:30-15-03.json  white-l-d-m-rf-reg-02:44-15-03.json  white-l-d-m-rf-reg-12:44-25-03.json  white-l-d-m-rf-reg-severity-08:53-01-04.pkl  white-m-g-rf-clf-18:44-22-02.pkl  white-m-gb-reg-19:15-22-02.pkl  (+6 more)
src/: alltab.py  synth.py  tab.py
src/common/: metrics.py  (+3 more)
(+105 files in other folders)
